--- a/about.html
+++ b/about.html
@@ -1,12 +1,15 @@
 <!doctype html>
 <head>
+  <title>My blog</title>
+  <link rel="stylesheet"
+  type="text/css" href="styles.css">
 </head>
-<title>My blog</title>
+
 <body>
   <div id="header">
     <div class="container">
     <a href="index.html">My Blog</a>
-    <ul>
+    <ul id=header-nav>
       <li><a href="about.html">About</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
@@ -20,7 +23,7 @@
         <h1 class="about-title">About Me</h1>
         <div class="about-contents">
           <p>Hi There! Welcome to Jazzy Tagz and I hope you've found everything alright.
-            We're an entrepreneurship started out of Northridge, California with one simple 
+            We're an entrepreneurship started out of Northridge, California with one simple
             mission in mind: To help lost pets find their way home again by providing premium
             pet id tagz.
           </p>
@@ -34,9 +37,9 @@
       <div class="column">
         <h4>My Links</h4>
         <p>
-          <a href="https://twitter.com/lilpump">insta</a>
+          <a href="https://www.instagram.com/jazzyblogz/?hl=en" target="_blank">Insta</a>
           <br>
-          <a href="https://facebook.com/kellie.gaines.9" target="_blank">facebook</a>
+          <a href="https://www.facebook.com/Jazzy-Blogz-264898090718612/" target="_blank">Facebook</a>
         </p>
       </div>
       <div class="column">
