--- a/about.html
+++ b/about.html
@@ -22,11 +22,11 @@
         </div>
         <h1 class="about-title">About Me</h1>
         <div class="about-contents">
-          <p>Hi There! Welcome to Jazzy Tagz and I hope you've found everything alright.
-            We're an entrepreneurship started out of Northridge, California with one simple
-            mission in mind: To help lost pets find their way home again by providing premium
-            pet id tagz.
-          </p>
+          <p>Hi There! Welcome to Jazzy Blogz and I hope you've found everything alright.
+            We're a blog started out of Northridge, California with one simple
+            mission in mind: Provide you with all the knowledge the need to be a responsible pet owner.
+            Whether that be a dog, cat, baby alligator, or ocelot
+           </p>
           <p>
             Check out our social media and our blog
           </p>
